--- a/api/build.gradle
+++ b/api/build.gradle
@@ -84,11 +84,16 @@ dependencies {
     compile group: 'uk.gov.hmcts.reform', name: 'idam-client', version: '1.3.1'
     compile group: 'com.nimbusds', name: 'nimbus-jose-jwt', version: '7.9'
     implementation "io.github.openfeign:feign-httpclient:10.7.0"
+
     compile "org.springframework.security:spring-security-web"
     compile "org.springframework.security:spring-security-config"
     compile "org.springframework.boot:spring-boot-starter-oauth2-client"
     compile "org.springframework.boot:spring-boot-starter-oauth2-resource-server"
     compile group: 'org.springframework.plugin', name: 'spring-plugin-core', version: '1.2.0.RELEASE'
+    compile group: 'io.github.openfeign', name: 'feign-core', version: '10.7.0'
+    compile group: 'org.springframework.cloud', name: 'spring-cloud-openfeign-core', version: '2.2.1.RELEASE'
+
+
     // End of OpenId Connect.
 
 
