--- a/api/build.gradle
+++ b/api/build.gradle
@@ -101,7 +101,8 @@ dependencies {
     testCompile(group: 'org.springframework.boot', name: 'spring-boot-starter-test') {
         exclude(module: 'commons-logging')
     }
-    testCompile group: 'org.springframework.security', name: 'spring-security-test', version: '5.0.4.RELEASE'
+    //testCompile group: 'org.springframework.security', name: 'spring-security-test', version: '5.0.4.RELEASE'
+    testCompile group: 'org.springframework.security', name: 'spring-security-test', version: '5.2.1.RELEASE'
     testCompile group: 'org.hamcrest', name: 'hamcrest-all', version: '1.3'
     testCompile group: 'org.hsqldb', name: 'hsqldb', version: '2.3.4'
 
