--- a/api/src/test/resources/application-componenttest.properties
+++ b/api/src/test/resources/application-componenttest.properties
@@ -81,3 +81,8 @@ service.callback.url=https://payment-node-aat.azurewebsites.net/api/HttpTrigger1
 callback.payments.cutoff.time.in.minutes=0
 
 azure.application-insights.instrumentation-key=0000-0000-0000-0000
+
+launchDarkly.sdkKey=${LAUNCH_DARKLY_SDK_KEY:sdk-ebe718c8-5fcc-44d7-889d-5338af2d1f3c}
+launchDarkly.connectionTimeout=3
+launchDarkly.socketTimeout=3
+launchDarkly.flushInterval=10
