--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -130,3 +130,8 @@ fees.register.url=${FEES_REGISTER_URL:https://fees-register-api.platform.hmcts.n
 #hystrix.command.default.circuitBreaker.enabled=false
 
 callback.payments.cutoff.time.in.minutes=${CALLBACK_PAYMENTS_CUTOFF_TIME_IN_MINUTES:0}
+
+launchDarkly.sdkKey=${LAUNCH_DARKLY_SDK_KEY:sdk-ebe718c8-5fcc-44d7-889d-5338af2d1f3c}
+launchDarkly.connectionTimeout=3
+launchDarkly.socketTimeout=3
+launchDarkly.flushInterval=10
