--- a/api/src/main/resources/db/changelog/db.changelog-0.1.4.yaml
+++ b/api/src/main/resources/db/changelog/db.changelog-0.1.4.yaml
@@ -165,7 +165,7 @@ databaseChangeLog:
                   ('remission_applied', 'Valid remission received and applied to fee successfully'),
                   ('payment_apportioned', 'Valid payment received and fee apportioned successfully');
   - changeSet:
-      id: 1554989041418-10
+      id: 1554989041418-12
       author: ayan
       changes:
         - createTable:
@@ -179,11 +179,14 @@ databaseChangeLog:
                     primaryKey: true
                     nullable: false
               - column:
+                  name: ccd_case_no
+                  type: varchar(255)
+              - column:
                   name: audit_type
                   type: varchar(255)
               - column:
                   name: audit_payload
-                  type: varchar(255)
+                  type: text
               - column:
                   name: audit_description
                   type: varchar(255)
