--- a/api/src/main/resources/application-local.properties
+++ b/api/src/main/resources/application-local.properties
@@ -12,10 +12,10 @@ spring.liquibase.change-log=classpath:/db/changelog/db.changelog-master.xml
 gov.pay.auth.key.probate_frontend=fillThisOut
 gov.pay.url=https://publicapi.payments.service.gov.uk/v1/payments
 
-auth.idam.client.baseUrl=http://localhost:5000
-auth.provider.service.client.baseUrl=http://localhost:8489
+auth.idam.client.baseUrl=http://localhost:8001
+auth.provider.service.client.baseUrl=http://localhost:8002
 
-trusted.s2s.service.names=cmc,probate_frontend,divorce_frontend,ccd_gw,bar_api,finrem_payment_service,ccpay_bubble,jui_webapp,xui_webapp,fpl_case_service,iac,internal
+trusted.s2s.service.names=cmc,probate_frontend,divorce_frontend,ccd_gw,bar_api,finrem_payment_service,ccpay_bubble,jui_webapp,xui_webapp,fpl_case_service,iac
 
 card.payments.report.scheduler.enabled = ${CARD_PAYMENTS_REPORT_SCHEDULER_ENABLED:true}
 card.payments.email.from=${CARD_PAYMENTS_EMAIL_FROM:dummy@gmail.com}
@@ -71,7 +71,7 @@ management.endpoints.web.base-path=/
 management.endpoints.web.exposure.include=health,info
 management.endpoint.health.show-details=always
 
-fees.register.url=http://localhost:8002
+fees.register.url=https://fees-register-api.platform.hmcts.net
 
 feature.payments.search=false
 feature.payments.service.callback=false
@@ -85,5 +85,3 @@ azure.servicebus.connection-string=${ASB_CONNECTION_STRING:dummy}
 
 payments.account.existing.account.number=PBA0082848
 payments.account.fake.account.number=QWERTYUIOP
-server.port = 8000
-
