--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -23,7 +23,7 @@ pci-pal.callback-url=${PCI_PAL_CALLBACK_URL:pci-pal-callback-url}
 paybubble.home.url=${PAYBUBBLE_HOME_URL:https://test.url.com}
 
 #CCD Data Store
-core_case_data.api.url=${CORE_CASE_DATA_API_URL:http://localhost:8000}
+core_case_data.api.url=${CORE_CASE_DATA_API_URL:http://localhost:4452}
 
 # Liberata
 liberata.api.account.url=${LIBERATA_API_ACCOUNT_URL:https://bpacustomerportal.liberata.com/pba/public/api/v2/account}
@@ -47,9 +47,8 @@ gov.pay.operational_services=${GOV_PAY_OPERATIONAL_SERVICES:#{ccd_gw,api_gw}}
 
 trusted.s2s.service.names=${TRUSTED_S2S_SERVICE_NAMES:cmc,cmc_claim_store,probate_frontend,divorce_frontend,ccd_gw,bar_api,api_gw,finrem_payment_service,ccpay_bubble,jui_webapp,xui_webapp,fpl_case_service}
 
-
-auth.idam.client.baseUrl=${AUTH_IDAM_CLIENT_BASEURL:#{http://localhost:5000}}
-auth.provider.service.client.baseUrl=${AUTH_PROVIDER_SERVICE_CLIENT_BASEURL:#{http://localhost:8489}}
+auth.idam.client.baseUrl=${AUTH_IDAM_CLIENT_BASEURL:#{http://dummy.dummy.net}}
+auth.provider.service.client.baseUrl=${AUTH_PROVIDER_SERVICE_CLIENT_BASEURL:#{http://dummy.dummy.net}}
 
 card.payments.report.startDate=${CARD_PAYMENTS_REPORT_START_DATE:#{null}}
 card.payments.report.endDate=${CARD_PAYMENTS_REPORT_END_DATE:#{null}}
