--- a/api/build.gradle
+++ b/api/build.gradle
@@ -69,8 +69,9 @@ dependencies {
 /*  compile group: 'org.springframework.hateoas', name: 'spring-hateoas', version:'0.25.1.RELEASE'*/
   compile group: 'org.apache.commons', name: 'commons-lang3', version:'3.9'
   compile group: 'net.logstash.logback', name: 'logstash-logback-encoder', version:'5.0'
-  compile group: 'org.apache.httpcomponents', name: 'httpclient', version:'4.5.11'
-  compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version:'2.10.0'
+    compile group: 'org.apache.httpcomponents', name: 'httpclient', version:'4.5.11'
+
+    compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version:'2.10.0'
   compile group: 'io.springfox', name: 'springfox-swagger-ui', version:'2.9.2'
   compile group: 'io.springfox', name: 'springfox-swagger2', version:'2.9.2'
   compile group: 'uk.gov.hmcts.reform', name: 'liquibase-core', version:'3.8.1'
@@ -115,13 +116,19 @@ dependencies {
     testCompile(group: 'org.springframework.boot', name: 'spring-boot-starter-test') {
         exclude(module: 'commons-logging')
     }
-    testCompile group: 'org.springframework.security', name: 'spring-security-test', version: '5.0.4.RELEASE'
+    //testCompile group: 'org.springframework.security', name: 'spring-security-test', version: '5.0.4.RELEASE'
+    testCompile group: 'org.springframework.security', name: 'spring-security-test', version: '5.2.1.RELEASE'
+
+
     testCompile group: 'org.hamcrest', name: 'hamcrest-all', version: '1.3'
     testCompile group: 'org.hsqldb', name: 'hsqldb', version: '2.3.4'
 
     testCompile group: 'com.github.tomakehurst', name: 'wiremock'
 
-    testCompile group: 'org.projectlombok', name: 'lombok', version: '1.18.4'
+    //testCompile group: 'org.projectlombok', name: 'lombok', version: '1.18.4'
+      testCompile group: 'org.projectlombok', name: 'lombok', version: '1.18.12'
+
+
     testCompile group: 'io.rest-assured', name: 'rest-assured', version: '3.0.7'
     testCompile group: 'org.springframework.boot', name: 'spring-boot-starter-thymeleaf'
 
@@ -137,7 +144,11 @@ dependencies {
     compile group: 'com.github.mifmif', name: 'generex', version: '1.0.2'
 
     compile group: 'org.pitest', name: 'pitest', version: '1.3.2'
-    compile 'info.solidsoft.gradle.pitest:gradle-pitest-plugin:1.3.0'
+
+    //compile 'info.solidsoft.gradle.pitest:gradle-pitest-plugin:1.3.0'
+      compile 'info.solidsoft.gradle.pitest:gradle-pitest-plugin:1.4.6'
+
+
     compile 'org.codehaus.sonar-plugins:sonar-pitest-plugin:0.5'
 }
 
