--- a/build.gradle
+++ b/build.gradle
@@ -37,6 +37,7 @@ allprojects {
         imports {
             mavenBom "org.springframework.boot:spring-boot-dependencies:${springBootVersion}"
             mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
+            mavenBom 'org.apache.logging.log4j:log4j-bom:2.13.3'
         }
         dependencies {
             // solves CVE-2019-12086
@@ -69,6 +70,13 @@ subprojects {
     }
 
     dependencies {
+
+        compile group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.13.3'
+        compile group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.13.3'
+        compile group:'org.dom4j',name:'dom4j',version: '2.1.3'
+
+
+
         compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version:'2.10.0'
         compile group: 'joda-time', name: 'joda-time', version: '2.10.5'
         compile group: 'org.jboss.aerogear', name: 'aerogear-otp-java', version:'1.0.0'
@@ -76,7 +84,12 @@ subprojects {
         compile group: 'uk.gov.hmcts.reform', name: 'properties-volume-spring-boot-starter', version: '0.0.4'
         testCompile group: 'junit', name: 'junit', version: '4.12'
         testCompile group: 'org.assertj', name: 'assertj-core', version: '3.8.0'
-        compileOnly group: 'org.projectlombok', name: 'lombok', version: '1.18.4'
+
+        //compileOnly group: 'org.projectlombok', name: 'lombok', version: '1.18.4'
+        compileOnly group: 'org.projectlombok', name: 'lombok', version: '1.18.12'
+        annotationProcessor 'org.projectlombok:lombok:1.18.12'
+
+
         compileOnly group: 'net.sourceforge.findbugs', name: 'annotations', version: '1.3.2'
         compile group: 'com.github.tomakehurst', name: 'wiremock', version: '2.23.2'
         compile(group: 'uk.gov.hmcts.reform', name: 'core-case-data-store-client', version: '4.6.4') {
