--- a/build.gradle
+++ b/build.gradle
@@ -3,7 +3,6 @@ plugins {
     id "org.sonarqube" version "2.6.2"
     id 'org.springframework.boot' version '2.2.6.RELEASE'
     id 'io.spring.dependency-management' version '1.0.8.RELEASE'
-    //id 'org.owasp.dependencycheck' version '5.2.4'
     id "uk.gov.hmcts.java" version '0.8.0'
     id "com.gorylenko.gradle-git-properties" version "1.4.21"
     id 'findbugs'
@@ -75,8 +74,6 @@ subprojects {
         compile group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.13.3'
         compile group:'org.dom4j',name:'dom4j',version: '2.1.3'
 
-
-
         compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version:'2.10.0'
         compile group: 'joda-time', name: 'joda-time', version: '2.10.5'
         compile group: 'org.jboss.aerogear', name: 'aerogear-otp-java', version:'1.0.0'
@@ -85,7 +82,6 @@ subprojects {
         testCompile group: 'junit', name: 'junit', version: '4.12'
         testCompile group: 'org.assertj', name: 'assertj-core', version: '3.8.0'
 
-        //compileOnly group: 'org.projectlombok', name: 'lombok', version: '1.18.4'
         compileOnly group: 'org.projectlombok', name: 'lombok', version: '1.18.12'
         annotationProcessor 'org.projectlombok:lombok:1.18.12'
 
@@ -152,9 +148,9 @@ springBoot {
 }
 
 dependencyCheck {
-    failBuildOnCVSS = 0
+    //failBuildOnCVSS = 0
     suppressionFile = 'dependency-check-suppressions.xml'
-    format='ALL'
+    //format='ALL'
 }
 
 def sonarExclusions = [
