--- a/api/build.gradle
+++ b/api/build.gradle
@@ -1,5 +1,5 @@
 plugins {
-    id "info.solidsoft.pitest" version '1.3.0'
+    id "info.solidsoft.pitest" version '1.5.1'
 }
 
 apply from: 'liquibase.gradle'
@@ -42,9 +42,10 @@ sonarqube {
 }
 
 def versions = [
-        pitest      : '1.3.2',
+        pitest      : '1.5.1',
         gradlePitest: '1.3.0',
-        sonarPitest : '0.5'
+        sonarPitest : '0.5',
+        lombok: '1.18.12'
 ]
 
 def javaLoggingVersion = '5.1.1'
@@ -59,7 +60,6 @@ dependencies {
   compile group: 'uk.gov.hmcts.reform', name: 'logging-appinsights', version: javaLoggingVersion
   compile group: 'uk.gov.hmcts.reform', name: 'logging-spring', version: javaLoggingVersion
   compile group: 'uk.gov.hmcts.reform.auth', name: 'auth-checker-lib', version: '2.1.3'
-  compile group: 'uk.gov.hmcts.reform', name: 'http-proxy-spring-boot-autoconfigure', version:'1.1.0'
   compile group: 'org.springframework.boot', name: 'spring-boot-autoconfigure'
   compile group: 'org.springframework.boot', name: 'spring-boot-starter-web'
   compile group: 'org.springframework.boot', name: 'spring-boot-starter-security'
@@ -77,7 +77,6 @@ dependencies {
   compile group: 'com.microsoft.azure', name: 'azure-servicebus-spring-boot-starter', version: '2.1.6'
   compile group: 'org.springframework.boot', name: 'spring-boot-starter-cache'
   compile group: 'com.github.ben-manes.caffeine', name: 'caffeine', version: '2.7.0'
-
     compile group: 'org.ff4j', name: 'ff4j-spring-boot-web-api', version: '1.7.1'
     compile group: 'org.ff4j', name: 'ff4j-web', version: '1.7.1'
     compile group: 'commons-fileupload', name: 'commons-fileupload', version: '1.3.3'
@@ -104,24 +103,21 @@ dependencies {
     testCompile group: 'org.springframework.security', name: 'spring-security-test', version: '5.0.4.RELEASE'
     testCompile group: 'org.hamcrest', name: 'hamcrest-all', version: '1.3'
     testCompile group: 'org.hsqldb', name: 'hsqldb', version: '2.3.4'
-
     testCompile group: 'com.github.tomakehurst', name: 'wiremock'
-
-    testCompile group: 'org.projectlombok', name: 'lombok', version: '1.18.4'
+    testCompile group: 'org.projectlombok', name: 'lombok', version: versions.lombok
     testCompile group: 'io.rest-assured', name: 'rest-assured', version: '3.0.7'
     testCompile group: 'org.springframework.boot', name: 'spring-boot-starter-thymeleaf'
-
     testCompile group: 'org.testcontainers', name: 'postgresql', version: '1.12.4'
     testCompile 'org.awaitility:awaitility:3.1.6'
-
     // smoke
     smokeTestCompile sourceSets.test.runtimeClasspath
-
     // functional
     functionalTestCompile sourceSets.test.runtimeClasspath
-
     compile group: 'com.github.mifmif', name: 'generex', version: '1.0.2'
-
+    annotationProcessor group: 'org.projectlombok', name: 'lombok', version: versions.lombok
+    functionalTestAnnotationProcessor group: 'org.projectlombok', name: 'lombok', version: versions.lombok
+    smokeTestCompileOnly group: 'org.projectlombok', name: 'lombok', version: versions.lombok
+    smokeTestAnnotationProcessor group: 'org.projectlombok', name: 'lombok', version: versions.lombok
     compile group: 'org.pitest', name: 'pitest', version: '1.3.2'
     compile 'info.solidsoft.gradle.pitest:gradle-pitest-plugin:1.3.0'
     compile 'org.codehaus.sonar-plugins:sonar-pitest-plugin:0.5'
@@ -151,7 +147,9 @@ pitest {
                        'uk.gov.hmcts.payment.api.reports.config.*']
     threads = 10
     outputFormats = ['XML', 'HTML']
-    historyInputLocation = ['build/reports/pitest/fastermutationtesting']
-    historyOutputLocation = ['build/reports/pitest/fastermutationtestingoutput']
+    historyInputLocation = 'build/reports/pitest/fastermutationtesting'
+    historyOutputLocation = 'build/reports/pitest/fastermutationtestingoutput'
     mutationThreshold = 90
 }
+
+
