--- a/build.gradle
+++ b/build.gradle
@@ -3,7 +3,8 @@ plugins {
     id "org.sonarqube" version "3.0"
     id 'org.springframework.boot' version '2.2.6.RELEASE'
     id 'io.spring.dependency-management' version '1.0.9.RELEASE'
-    id 'org.owasp.dependencycheck' version '5.3.0'
+    //id 'org.owasp.dependencycheck' version '5.3.0'
+    id "uk.gov.hmcts.java" version '0.8.0'
     id "com.gorylenko.gradle-git-properties" version "1.4.21"
     id 'jacoco'
 }
@@ -43,14 +44,12 @@ allprojects {
         imports {
             mavenBom "org.springframework.boot:spring-boot-dependencies:${springBootVersion}"
             mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
+            mavenBom 'org.apache.logging.log4j:log4j-bom:2.13.3'
         }
         dependencies {
-            // solves CVE-2019-12086
-            // remove once spring manager incorporates this changes
             dependencySet(
                     group: 'com.fasterxml.jackson.core',
                     version: '2.10.0'
-                    //version: dependencyManagement.importedProperties['jackson.version'] solves CVE-2019-12086
             ) {
                 entry 'jackson-core'
                 entry 'jackson-databind'
@@ -104,9 +103,14 @@ subprojects {
         }
     }
 
-
     dependencies {
         compile ('com.sun.xml.bind:jaxb-osgi:2.3.1')
+
+        //compile group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.13.3'
+        //compile group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.13.3'
+        //compile group:'org.dom4j',name:'dom4j',version: '2.1.3'
+
+        testCompile 'io.github.openfeign:feign-jackson:9.7.0'
         compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version:'2.10.0'
         compile group: 'joda-time', name: 'joda-time', version: '2.10.5'
         compile group: 'org.jboss.aerogear', name: 'aerogear-otp-java', version:'1.0.0'
