--- a/api/src/main/resources/bootstrap.yaml
+++ b/api/src/main/resources/bootstrap.yaml
@@ -30,3 +30,15 @@ spring:
         pba-divorce-payments-email-to: pba.divorce.payments.email.to
         pba-fpl-payments-email-to: pba.fpl.payments.email.to
         launch-darkly-sdk-key: launch.darkly.sdk.key
+        pci-pal-antenna-tenant-name: pci-pal.antenna.tenant.name
+        pci-pal-antenna-user-name: pci-pal.antenna.user.name
+        pci-pal-antenna-client-id: pci-pal.antenna.client.id
+        pci-pal-antenna-client-secret: pci-pal.antenna.client.secret
+        pci-pal-antenna-get-tokens-url: pci-pal.antenna.get.tokens.url
+        pci-pal-antenna-launch-url: pci-pal.antenna.launch.url
+        pci-pal-antenna-view-id-url: pci-pal.antenna.view.id.url
+        pci-pal-antenna-return-url: pci-pal.antenna.return.url
+        pci-pal-antenna-cmc-flow-id: pci-pal.antenna.cmc.flow.id
+        pci-pal-antenna-probate-flow-id: pci-pal.antenna.probate.flow.id
+        pci-pal-antenna-divorce-flow-id: pci-pal.antenna.divorce.flow.id
+        pci-pal-antenna-financial-remedy-flow-id: pci-pal.antenna.financial.remedy.flow.id
