--- a/charts/payment-api/values.preview.template.yaml
+++ b/charts/payment-api/values.preview.template.yaml
@@ -22,5 +22,17 @@ java:
     #Below key required for preview pipeline
     GOV_PAY_AUTH_KEY_CMC: 8ln764q6jrbgqvvvv40uggsea3h1p602v79gdrt7ni66mrmpk416ulohvd
     LAUNCH_DARKLY_SDK_KEY: sdk-06456c8b-312c-475c-b154-ca585f5ca063
+    PCI_PAL_ANTENNA_TENANT_NAME: HMCTS
+    PCI_PAL_ANTENNA_USER_NAME: APIUser
+    PCI_PAL_ANTENNA_CLIENT_ID: HMCTSStage
+    PCI_PAL_ANTENNA_CLIENT_SECRET: Vm82kOUZAf9U4Kms3hIQM03jqsDQKc8aHIGy5I9y
+    PCI_PAL_ANTENNA_GET_TOKENS_URL: https://pcipalstaging.cloud/api/v1/token
+    PCI_PAL_ANTENNA_LAUNCH_URL: https://euwest1.pcipalstaging.cloud/api/v1/session/303/launch
+    PCI_PAL_ANTENNA_VIEW_ID_URL: https://euwest1.pcipalstaging.cloud/session/303/view/
+    PCI_PAL_ANTENNA_RETURN_URL: http://localhost
+    PCI_PAL_ANTENNA_CMC_FLOW_ID: 1356
+    PCI_PAL_ANTENNA_PROBATE_FLOW_ID: 1356
+    PCI_PAL_ANTENNA_DIVORCE_FLOW_ID: 1356
+    PCI_PAL_ANTENNA_FINANCIAL_REMEDY_FLOW_ID: 1356
   postgresql:
     enabled: true
