--- a/charts/payment-api/values.preview.template.yaml
+++ b/charts/payment-api/values.preview.template.yaml
@@ -22,8 +22,8 @@ java:
     #Below key required for preview pipeline
     GOV_PAY_AUTH_KEY_CMC: 8ln764q6jrbgqvvvv40uggsea3h1p602v79gdrt7ni66mrmpk416ulohvd
     LAUNCH_DARKLY_SDK_KEY: sdk-06456c8b-312c-475c-b154-ca585f5ca063
-    ASB_CONNECTION_STRING: RW5kcG9pbnQ9c2I6Ly9zYi02MjAyM2MwZS0yYjMyLTQzYzUtYjY0MS1lNDgzMzY2ZjNhMjcuc2VydmljZWJ1cy53aW5kb3dzLm5ldC87U2hhcmVkQWNjZXNzS2V5TmFtZT1Sb290TWFuYWdlU2hhcmVkQWNjZXNzS2V5O1NoYXJlZEFjY2Vzc0tleT1xVHU3dHE5YURPSTQ3T01sd3JQNmxwTTZGS05scFVyeGM4NjBlZkkzUTZ3PQ==
-    ASB_TOPIC_NAME: c2VydmljZWNhbGxiYWNrdG9waWM=
-    ASB_SUBSCRIPTION_NAME: NzA0YjhjMDItNzI1Mi00NTU5LWIyYmQtOGJjN2E4NDE3ODY1
+    ASB_CONNECTION_STRING: Endpoint=sb://sb-62023c0e-2b32-43c5-b641-e483366f3a27.servicebus.windows.net/;SharedAccessKeyName=RootManageSharedAccessKey;SharedAccessKey=qTu7tq9aDOI47OMlwrP6lpM6FKNlpUrxc860efI3Q6w=
+    ASB_TOPIC_NAME: servicecallbacktopic
+    ASB_SUBSCRIPTION_NAME: 704b8c02-7252-4559-b2bd-8bc7a8417865
   postgresql:
     enabled: true
