--- a/api/build.gradle
+++ b/api/build.gradle
@@ -62,6 +62,13 @@ def versions = [
         reformS2sClient    : '3.1.1'
 ]
 
+configurations.all {
+    resolutionStrategy {
+        force 'io.micrometer:micrometer-core:1.6.1'
+    }
+}
+
+
 def javaLoggingVersion = '5.1.1'
 
 dependencies {
