--- a/api/build.gradle
+++ b/api/build.gradle
@@ -62,8 +62,6 @@ def versions = [
         reformS2sClient    : '3.1.1'
 ]
 
-
-
 def javaLoggingVersion = '5.1.1'
 
 configurations.all {
@@ -85,11 +83,11 @@ dependencies {
   compile group: 'uk.gov.hmcts.reform', name: 'logging-appinsights', version: javaLoggingVersion
   compile group: 'uk.gov.hmcts.reform', name: 'logging-spring', version: javaLoggingVersion
   compile group: 'uk.gov.hmcts.reform.auth', name: 'auth-checker-lib', version: '2.1.3'
-  compile (group: 'uk.gov.hmcts.reform', name: 'service-auth-provider-client', version: versions.reformS2sClient)
+  compile group: 'uk.gov.hmcts.reform', name: 'service-auth-provider-client', version: versions.reformS2sClient
   compile group: 'org.springframework.boot', name: 'spring-boot-autoconfigure'
-  compile (group: 'org.springframework.boot', name: 'spring-boot-starter-web')
+  compile group: 'org.springframework.boot', name: 'spring-boot-starter-web'
   compile group: 'org.springframework.boot', name: 'spring-boot-starter-security'
-  compile (group: 'org.springframework.boot', name: 'spring-boot-starter-actuator',version: '2.3.6.RELEASE')
+  compile group: 'org.springframework.boot', name: 'spring-boot-starter-actuator',version: '2.3.6.RELEASE'
   compile group: 'org.springframework.boot', name: 'spring-boot-starter-data-jpa'
   compile group: 'org.springframework.cloud', name: 'spring-cloud-starter-netflix-hystrix', version: '2.1.2.RELEASE'
   compile group: 'org.apache.commons', name: 'commons-lang3', version:'3.9'
@@ -104,7 +102,7 @@ dependencies {
   compile group: 'com.github.ben-manes.caffeine', name: 'caffeine', version: '2.7.0'
     implementation "io.github.openfeign:feign-httpclient:10.7.0"
     compile group: 'io.github.openfeign', name: 'feign-core', version: '10.7.0'
-    compile (group: 'org.springframework.cloud', name: 'spring-cloud-openfeign-core', version: '2.2.1.RELEASE')
+    compile group: 'org.springframework.cloud', name: 'spring-cloud-openfeign-core', version: '2.2.1.RELEASE'
     compile group: 'org.ff4j', name: 'ff4j-spring-boot-web-api', version: '1.7.1'
     compile group: 'org.ff4j', name: 'ff4j-web', version: '1.7.1'
     compile group: 'commons-fileupload', name: 'commons-fileupload', version: '1.3.3'
@@ -125,7 +123,6 @@ dependencies {
     compile(group: 'org.springframework.hateoas', name: 'spring-hateoas', version: '1.0.4.RELEASE') {
         exclude(module: 'spring-plugin-core')
     }
-
     testCompile(group: 'org.springframework.boot', name: 'spring-boot-starter-test') {
         exclude(module: 'commons-logging')
     }
@@ -161,7 +158,6 @@ dependencies {
     contractTestRuntime("org.junit.jupiter:junit-jupiter-engine:5.3.2")
     contractTestImplementation('org.junit.jupiter:junit-jupiter-api:5.3.2')
 }
-
 
 test {
     // Base test class for other tests - has no runnable test methods
