--- a/charts/payment-api/Chart.yaml
+++ b/charts/payment-api/Chart.yaml
@@ -9,5 +9,5 @@ maintainers:
     email: ccpay@hmcts.net
 dependencies:
   - name: java
-    version: ~3.0.0-beta
+    version: 3.4.4
     repository: '@hmctspublic'
