--- a/api/src/main/resources/application-local.properties
+++ b/api/src/main/resources/application-local.properties
@@ -97,3 +97,5 @@ idam.s2s-auth.microservice=${PAYMENT_S2S_MICROSERVICE_NAME:internal}
 idam.s2s-auth.url=${AUTH_PROVIDER_SERVICE_CLIENT_BASEURL:localhost:8489}
 
 pba.config1.service.names=${PBA_CONFIG1_SERVICE_NAMES:PROBATE}
+server.shutdown=graceful
+spring.lifecycle.timeout-per-shutdown-phase=30s
