--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -147,3 +147,6 @@ launchDarkly.connectionTimeout=3
 launchDarkly.socketTimeout=3
 launchDarkly.flushInterval=10
 pba.config1.service.names=${PBA_CONFIG1_SERVICE_NAMES:dummy}
+
+server.shutdown=${SERVER_SHUTDOWN_STRATEGY:graceful}
+spring.lifecycle.timeout-per-shutdown-phase=${TIMEOUT_SERVER_SHUTDOWN_PHASE:30s}
