--- a/charts/payment-api/values.yaml
+++ b/charts/payment-api/values.yaml
@@ -73,7 +73,8 @@ java:
     FEATURE_SERVICE_CALLBACK: "true"
     PAYMENT_S2S_MICROSERVICE_NAME: payment_app
     PBA_CONFIG1_SERVICE_NAMES: PROBATE,CMC
-
+    SERVER_SHUTDOWN_STRATEGY: graceful
+    TIMEOUT_SERVER_SHUTDOWN_PHASE: 30s
 
   keyVaults:
     "ccpay":
