--- a/api-contract/build.gradle
+++ b/api-contract/build.gradle
@@ -3,5 +3,6 @@ description = ''
 dependencies {
     compile group: 'org.hibernate', name: 'hibernate-validator', version:'6.0.17.Final'
     compile group: 'org.glassfish', name: 'javax.el', version: '3.0.1-b11'
+    compile group: 'com.opencsv', name: 'opencsv', version: '5.0'
     compile project(':payment-model')
 }
