--- a/build.gradle
+++ b/build.gradle
@@ -39,6 +39,37 @@ allprojects {
         jcenter()
         maven { url 'https://repo.spring.io/libs-milestone' }
     }
+
+    configurations.all {
+        resolutionStrategy {
+            eachDependency { DependencyResolveDetails det ->
+                if (det.requested.name == 'tomcat-embed-core') {
+                    det.useVersion '9.0.41'
+                }
+
+                if (det.requested.name == 'tomcat-embed-websocket') {
+                    det.useVersion '9.0.41'
+                }
+                if (det.requested.group == 'com.fasterxml.jackson.core') {
+                    det.useVersion '2.12.0'
+                }
+
+                if (det.requested.name == 'launchdarkly-java-server-sdk') {
+                    det.useVersion '5.2.1'
+                }
+
+                if (det.requested.name == 'handlebars') {
+                    det.useVersion '4.2.0'
+                }
+
+                if (det.requested.name == 'bcprov-jdk15on') {
+                    det.useVersion '1.68'
+                }
+
+            }
+        }
+    }
+
     dependencyManagement {
         imports {
             mavenBom "org.springframework.boot:spring-boot-dependencies:${springBootVersion}"
